--- a/app/build.gradle
+++ b/app/build.gradle
@@ -152,5 +152,11 @@ dependencies {
 
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
+
+
+//as directed by https://console.firebase.google.com/u/0/project/sab-mangwao/settings/general/android:com.sabmangwao
+    implementation platform('com.google.firebase:firebase-bom:26.3.0')
 }
 
